# moon

./: .gitignore  .mcp.json  README.md  package-lock.json  package.json  render.yaml  vercel.json
.github/workflows/: ci.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py  routes.py
apps/api/app/core/: config.py
apps/api/app/data/: __init__.py  seed.py
apps/api/app/models/: schemas.py
apps/api/app/repositories/: funds.py  indices.py  managers.py  users.py
apps/api/app/services/: metrics.py  portfolio.py  sync.py
apps/api/moon_fund_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: sync_funds.py  sync_indices.py
apps/api/tests/: test_api.py  test_auth.py  test_config.py  test_fund_repository.py  test_index_repository.py  test_metrics.py  test_portfolio.py  test_sync.py  test_user_repository.py
apps/web/: index.html  package.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  styles.css  types.ts
apps/web/src/components/: AccountPanel.tsx  AdvancedMetricsPanel.tsx  AnalyticsCharts.tsx  AuthButton.tsx  InsightPanel.tsx  MetricCard.tsx  MetricStrip.tsx  NavChart.tsx  QueryStatePanel.tsx
apps/web/src/hooks/: useSession.ts
apps/web/tests/: ui-design-contract.test.mjs
docs/: deployment.md  preview.html  supabase-local-setup.md  verification.md
docs/superpowers/plans/: 2026-05-31-fund-analysis-site.md  2026-06-05-frontend-analytics-workbench.md
docs/superpowers/specs/: 2026-06-05-frontend-analytics-workbench-design.md
supabase/: schema.sql
(+14 files in other folders)
