[project]
name = "moon-fund-api"
version = "0.1.0"
description = "FastAPI backend for Moon fund analysis."
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.15.0",
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "python-jose[cryptography]>=3.3.0",
  "supabase>=2.10.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.7.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"
